--- a/2019-11-21-python-intro/Errors.ipynb
+++ b/2019-11-21-python-intro/Errors.ipynb
@@ -1,12 +1,26 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an error when you try to import a library that you don't have"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import i_wish_i_had_this_library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These two errors are when you try to reference something that is not defined (i.e. a function or variable is not created or imported)"
    ]
   },
   {
@@ -28,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You get this error when you try to call something as function when it is not a function. The key message is \"not callable\" part"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -38,12 +59,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an error when you try to divide by zero. It's anticipated in this case, but if you're dividing by a variable that changes its value over time, this can surprise you"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "10 / 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is an error when you try to use something as a list or dict and get an element from it, but the object is actually not a list or dict. The key message is \"not subscriptable\""
    ]
   },
   {
@@ -57,6 +92,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some operations are not defined for some types, then you will usually get `TypeError`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -66,12 +108,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Some functions have certain expectations about the parameters you pass them. If the expectations are not met, they usually complain with `ValueError` and some hopefully understandable message"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "max([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When working with dicts and trying to get a value for a key that is absent in the dict, you get this error. If you have many `KeyError`s in your program, consider using dict method `get`"
    ]
   },
   {
@@ -85,6 +141,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not everything in python can be used as a dict key. For some keys dict will refuse to work with them and indicate this with `TypeError` with a \"unhashable\" message"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -95,6 +158,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you try to access a certain list element by its number but the list is actually shorter and does not have that many elements, you get this error"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -102,6 +172,13 @@
    "source": [
     "a = []\n",
     "a[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, if you use slice notation, python won't complain"
    ]
   },
   {
